--- a/var/www/maintenance/index.html
+++ b/var/www/maintenance/index.html
@@ -1,6 +1,6 @@
 
 <h1>Down for Maintenance</h1>
 
-<p>CPAN Testers is temporarily down for maintenance: The database tables
-are being repaired. We hope to be back up by Saturday, October 22
-2016.</p>
+<p>CPAN Testers is temporarily down for maintenance: The database
+servers are being moved to a new physical location.
+We hope to be back up by 2020-09-10 17:00 US/Central.</p>
